<resources>
    <string name="app_name">RecyclerViewWebListDemo</string>

    <string name="skip">跳過%1$s</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="loading">正在加載中&#8230;</string>
    <string name="uploading">正在上傳圖片&#8230;</string>
    <string name="net_error_try">網絡鏈接失敗，請稍後再試試。</string>
    <string name="net_error_tip_message">服務異常，請重試。</string>
    <string name="back">返回</string>
    <string name="update_tip">發現新版本</string>
    <string name="tip">提示</string>
    <string name="confirm">確定</string>
    <string name="confirm2">確認</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="input">請輸入</string>
    <string name="choose">請選擇</string>
    <string name="search">搜索</string>
    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="complete">完成</string>

    <!--商品管理-->
    <string name="store_add_goods">添加商品</string>
    <string name="store_category_manager">分類管理</string>
    <string name="store_add_category">添加分類</string>
    <string name="store_edit_category">編輯分類</string>
    <string name="store_add_goods_category">新增商品分類</string>
    <string name="store_category_number">分類編號</string>
    <string name="store_category_name">分類名稱</string>
    <string name="store_category_sore_time">售賣時間</string>
    <string name="store_category_sore_time_edit">編輯售賣時間段</string>
    <string name="store_category_sore_time_invalid">非營業時間，請謹慎操作</string>
    <string name="goods_input_category_time_hint">默認為營業時間</string>

    <string name="store_goods_create">添加商品</string>
    <string name="store_goods_edit">編輯商品</string>
    <string name="store_goods_number">商品編號</string>
    <string name="store_goods_delete_confirm">确定删除？</string>
    <string name="store_goods_category">所屬分類</string>
    <string name="store_goods_name">商品名</string>
    <string name="store_goods_detail">商品簡介</string>
    <string name="store_goods_photo">商品圖</string>
    <string name="store_goods_photo_one">一張</string>
    <string name="store_goods_price">售價</string>
    <string name="store_goods_has_package">套餐類型</string>
    <string name="store_goods_under_shelf">下架</string>
    <string name="store_goods_on_shelf">上架</string>
    <string name="store_goods_package_type_single">單品</string>
    <string name="store_goods_package_type_package">套餐</string>
    <string name="store_goods_package_type_only_package">僅選項</string>
    <string name="store_goods_add_tab">新增配選項目</string>
    <string name="input_goods_detail">選填,點擊輸入簡介（最多100字）</string>
    <string name="choose_not_must">選填,請選擇</string>
    <string name="input_goods_price">請輸入數值</string>
    <string name="store_goods_tab_card">配選項目</string>
    <string name="store_goods_tab">選項</string>
    <string name="store_goods_tab_price_tip">請輸入加價金額</string>
    <string name="store_goods_tab_name">配選名稱</string>
    <string name="store_goods_tab_type">配選類型</string>
    <string name="store_goods_add_tab_card">新增選項</string>
    <string name="store_goods_tab_must_two">必選兩項</string>
    <string name="store_goods_tab_must_three">必選三項</string>
    <string name="store_goods_tab_must_four">必選四項</string>
    <string name="store_goods_tab_empty">請添加選項</string>
    <string name="store_goods_tab_not_enough">選項數不足</string>
    <string name="store_goods_photo_empty">請先選擇一張圖片</string>
    <string name="store_goods_list_empty">暫無商品</string>
    <string name="store_goods_list_search_empty">未搜索到商品</string>
    <string name="store_goods_category_empty">請先添加商品分類</string>
    <string name="store_goods_search">商品搜索</string>
    <string name="goods_input_name">請輸入商品名稱</string>
    <string name="goods_input_num">請輸入商品編號</string>
    <string name="goods_input_num_search">請輸入商品編號,搜索商品</string>
    <string name="goods_input_category">請選擇商品分類</string>
    <string name="goods_input_detail">請輸入商品簡介</string>
    <string name="goods_input_price">請輸入售價</string>
    <string name="goods_price_zero">售價不能為0</string>
    <string name="goods_input_package_name">請輸入配選名稱</string>
    <string name="goods_input_package_type">請輸入配選類型</string>
    <string name="goods_input_package_tab_name">請輸入選項名稱</string>
    <string name="goods_input_package_tab_price">請輸入加價金額</string>
    <string name="goods_input_category_name">請輸入分類名稱</string>
    <string name="goods_input_category_num">請輸入分類編號</string>
    <string name="goods_list_drag_tip">商品列表（长按可拖动排序）</string>
    <string name="goods_name_repeat_tip">商品編號重復，請重新輸入 </string>
    <string name="goods_num_error_tip">選項商品編號有誤，請重新輸入 </string>
    <string name="goods_net_error_tip">網絡延遲，請重新提交 </string>

</resources>
