<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:visibility="visible" />


        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--商品編號-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_goods_number"
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/store_goods_number"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <EditText
                android:id="@+id/edit_goods_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/store_goods_number"
                android:gravity="left|center"
                android:hint="@string/input"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--所屬分類-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/store_goods_category"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/text_goods_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/choose"
                android:maxLines="1"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="right|center_vertical"
                android:src="@mipmap/icon_arrow_right" />

        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--商品名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_goods_name"
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/store_goods_name"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <EditText
                android:id="@+id/edit_goods_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="start|center"
                android:hint="@string/input"
                android:maxLength="100"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--商品簡介-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_goods_detail"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_48"
                android:gravity="left|center"
                android:text="@string/store_goods_detail"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <EditText
                android:id="@+id/edit_goods_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/store_goods_detail"
                android:gravity="left"
                android:hint="@string/input_goods_detail"
                android:maxLength="100"
                android:paddingBottom="@dimen/dp_12"
                android:paddingTop="@dimen/dp_12"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--商品圖-->
        <LinearLayout
            android:id="@+id/layout_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:minHeight="@dimen/dp_48"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_goods_photo"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_48"
                android:gravity="left|center"
                android:text="@string/store_goods_photo"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <ImageView
                android:id="@+id/image_add_photo"
                android:layout_width="@dimen/dp_56"
                android:layout_height="@dimen/dp_56"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:contentDescription="@string/store_goods_photo"
                android:src="@drawable/selector_image_add"
                android:visibility="gone" />


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_goods_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_48"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="@dimen/dp_5"
                    android:drawableRight="@mipmap/icon_arrow_right"
                    android:gravity="right|center_vertical"
                    android:text="@string/choose_not_must"
                    android:textColor="@color/color_cccccc"
                    android:textSize="@dimen/sp_16" />

            </RelativeLayout>


        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--售價-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_goods_price"
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/store_goods_price"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <EditText
                android:id="@+id/edit_goods_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/store_goods_price"
                android:gravity="left|center_vertical"
                android:hint="@string/input_goods_price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <View
            style="@style/line_horiz"
            android:layout_marginLeft="@dimen/dp_16" />

        <!--    &lt;!&ndash;套餐類型&ndash;&gt;
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16">

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="left|center"
                    android:text="@string/store_goods_has_package"
                    android:textColor="@color/color_262626"
                    android:textSize="@dimen/sp_17" />

                <com.hk01.eatojoybiz.widget.switchbutton.SwitchButton
                    android:id="@+id/toggle_goods_package"
                    android:layout_width="@dimen/dp_52"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswAnimationDuration="300"
                    app:kswBackDrawable="@drawable/tog_background_selected"
                    app:kswThumbColor="@color/white"
                    app:kswThumbHeight="@dimen/dp_22"
                    app:kswThumbRadius="@dimen/dp_11"
                    app:kswThumbWidth="@dimen/dp_22" />
            </RelativeLayout>
    -->
        <!--套餐類型-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_100"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/store_goods_has_package"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:id="@+id/text_goods_package"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/choose"
                android:maxLines="1"
                android:textColor="@color/color_262626"
                android:textColorHint="@color/color_cccccc"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="right|center_vertical"
                android:src="@mipmap/icon_arrow_right" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>