<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <!--商品编号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <RelativeLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_delete_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_goods_delete_tab" />

            <TextView
                android:id="@+id/text_label_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_toRightOf="@+id/img_delete_tab"
                android:text="@string/store_goods_tab"
                android:textColor="@color/color_262626"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>


        <EditText
            android:id="@+id/edit_label_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/goods_input_num_search"
            android:inputType="number"
            android:maxLength="40"
            android:paddingBottom="@dimen/dp_2"
            android:paddingTop="@dimen/dp_2"
            android:textColor="@color/color_262626"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>


    <View
        style="@style/line_horiz"
        android:layout_marginLeft="@dimen/dp_16" />

    <!--商品名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <RelativeLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent"
            android:visibility="invisible">

        </RelativeLayout>


        <EditText
            android:id="@+id/edit_label_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/goods_input_package_name"
            android:inputType="text"
            android:maxLength="40"
            android:paddingBottom="@dimen/dp_2"
            android:paddingTop="@dimen/dp_2"
            android:textColor="@color/color_262626"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <View
        style="@style/line_horiz"
        android:layout_marginLeft="@dimen/dp_16" />

    <!--商品金额-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent"
            android:visibility="invisible">

        </RelativeLayout>

        <EditText
            android:id="@+id/edit_label_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/store_goods_tab_price_tip"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/color_262626"
            android:textColorHint="@color/color_cccccc"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <View
        style="@style/line_horiz"
        android:layout_marginLeft="@dimen/dp_16" />


</LinearLayout>